fix(whiteboard) Avoid whiteboard expending when content is too large (#2110)

--- a/frontend/app/js/editor/editor.less
+++ b/frontend/app/js/editor/editor.less
@@ -8,6 +8,7 @@
 
 #editor-container {
   flex: 1;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
